# detray-fpga

./: .envrc  .gitignore  .gitmodules  build.sh  build_cuda.sh  build_vitis.sh  compile_commands.json  shell.nix
fpga-impl/: CMakeLists.txt  Makefile  output.txt
fpga-impl/_x/: v++_link_kernel_main_guidance.pb3
fpga-impl/_x/kernel/.jobs/: vrs_config_1.xml
fpga-impl/_x/kernel/kernel_main/: .loader.begin.rst  htr.txt  kernel_main.tcl  rundef.js  runme.bat  runme.sh  vitis_hls.pb
fpga-impl/_x/kernel/kernel_main/kernel_main/: hls.app  kernel.xml
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/: solution.aps  solution_data.json
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/.autopilot/: .automg_exit  .autopilot_exit
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/.autopilot/db/: a.g.0.bc  a.g.1.bc  a.g.2.bc  a.g.2.prechk.bc  a.g.ld.0.bc  a.g.ld.0.bc.clang.reflow.diag.yml  a.g.ld.1.lower.bc  a.g.ld.3.fpc.bc  a.g.ld.4.m2.bc  a.g.ld.5.gdce.bc  a.o.1.tmp.bc  a.o.2.bc  a.o.3.bc  all.directive.json  apatb_kernel_main.cpp  apatb_kernel_main_ir.bc  apatb_kernel_main_ir.ll  autopilot.rtl.models.tcl  burst.xml  cmplx.3.000.fe.link.json  cmplx.3.001.fe.unroll-raw.json  cmplx.3.002.fe.unroll-simplified.json  cmplx.3.005.fe.array-partition-raw.json  cmplx.3.009.fe.infer-access-pattern.json  cmplx.3.010.fe.performance-prep.json  cmplx.3.015.fe.lowering.json  cmplx.3.016.fe.opt.json  cmplx.5.0.fe.end.json  cosimDB.tcl  design.bindinfo.xml  dut.hcp  fe_messages.xml  global.setting.tcl  hls_design_meta.cpp  hls_design_meta.h  hls_design_meta.tcl  kernel.bc  kernel.internal.xml  kernel.pp.0.cpp  kernel.pp.0.cpp.clang-tidy.loop-label.diag.yml  (+34 more)
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/.autopilot/db/coregen/: control.h  control.slave.tcl
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/.autopilot/db/driver/data/: kernel_main.tcl  kernel_main.yaml
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/.autopilot/db/driver/src/: Makefile  xkernel_main.h
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/.debug/: kernel_main.protoinst
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/impl/: export.xo
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/impl/ip/: component.xml  pack.sh  run_ippack.tcl  sysgen_info.xml  vivado.jou
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/impl/ip/drivers/kernel_main_v1_0/src/: CMakeLists.txt  xkernel_main.c  xkernel_main_linux.c
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/impl/ip/hdl/verilog/: kernel_main.v  kernel_main_gmem_m_axi.v
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/impl/ip/hdl/vhdl/: kernel_main.vhd
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/impl/misc/drivers/kernel_main_v1_0/data/: kernel_main.mdd
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/impl/misc/drivers/kernel_main_v1_0/src/: xkernel_main_hw.h  xkernel_main_sinit.c
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/impl/misc/hls_files/kernel_main/solution/: solution.directive  solution_data.json
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/impl/misc/hls_files/kernel_main/solution/.autopilot/db/: autopilot.rtl.models.txt  kernel_main.adb  kernel_main.design.xml  kernel_main.verbose.rpt.xml
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/impl/misc/hls_files/kernel_main/solution/syn/report/: kernel_main_Pipeline_VITIS_LOOP_10_1_csynth.rpt  kernel_main_csynth.rpt
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/impl/vhdl/: kernel_main_control_s_axi.vhd  kernel_main_flow_control_loop_pipe_sequential_init.vhd
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/syn/report/: csynth.rpt  csynth.xml  csynth_design_size.rpt  csynth_design_size.xml  kernel_main_Pipeline_VITIS_LOOP_10_1_csynth.xml  kernel_main_csynth.xml
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/syn/verilog/: kernel_main_control_s_axi.v  kernel_main_flow_control_loop_pipe_sequential_init.v  kernel_main_kernel_main_Pipeline_VITIS_LOOP_10_1.v
fpga-impl/_x/kernel/kernel_main/kernel_main/solution/syn/vhdl/: kernel_main_gmem_m_axi.vhd  kernel_main_kernel_main_Pipeline_VITIS_LOOP_10_1.vhd
fpga-impl/_x/logs/: optraceViewer.html
fpga-impl/_x/reports/link/: automation_summary.txt  v++_link_kernel_main_guidance.html
fpga-impl/config/: hls.cfg  link.cfg
fpga-impl/include/detray/tutorial/: detector_metadata.hpp  my_square2D.hpp
fpga-impl/src/: host.cpp  host_ocl.cpp  kernel  kernel.cpp  kernel_test.cpp
python-scripts/: guard_host_functions.py  remove_vs.py  util.py
